# argparse-sh

./: .gitignore  Cargo.toml  LICENSE  README.md  demo.sh  test_script.sh
samples/: full_demo.sh
src/: main.rs  main2.rs
src/arguments/: argument.rs  argument_boolean.rs  argument_choice.rs  argument_common.rs  argument_float.rs  argument_integer.rs  argument_string.rs  errors.rs  mod.rs
