[package]
name = "argparse"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Structured argument parsing for shell scripts"
readme = "README.md"
homepage = "https://github.com/Hounshell/argparse"
repository = "https://github.com/Hounshell/argparse"
keywords = ["cli", "arguments", "argparse"]
categories = ["command-line-interface", "command-line-utilities"]

[dependencies]
regex = "1.10.3"
termsize = "0.1.6"
textwrap = "0.16.1"
unicode-width = "0.1.11"

